    - Locking a window will be remember like position now
    - Added Omni's sound file
    - Can now left/right click gobs on Loftar's map like you can on minimap
    - Changed how hover tooltips worked for the 3D world. It's no longer ctrl + hover. There is now a setting that
    toggles it on/off under Gameplay -> "Show Hover Tooltips". You can also toggle with Shift+V


3/1/19
    - Can now mark tiles with Alt + right click -> Mark for party

2/28/19
    - Shift+B to toggle hitboxes
    - Fixed bug that made everything dynamic.
    - Making a dynamic object hidden will now make it static like it should and increase performance!
    - Updated text next to "Show Crop Stage" and "Show Gob HP" to remind you it'll be a performance hit. Objects that
    need to show these end up having to be dynamic because of it. In large numbers you'll notice a difference.
    - When you untoggle Stop Animations they will continue to tick in the background, just not update (unless you mouse
    hover). While in this mode they will become static.
        - Note: on hearthfires you may see the name float off because of this.
    - Dead animals or composite gobs should no longer be dynamic when all their poses are done
    - Show animations should almost affect everything now.

2/27/19
    - You can now alt + click on Loftar's map to queue a move through it. Loftar's map will show the lines of
    the path on it to. You can recolor these lines under Gameplay Settings -> Gob
    - The current waypoint is also marked with a pointer. You can mouse over to see the distance from it.

2/26/19
    - Fixed the bug with not being able to use hotkeys while in combat
    - Rearranged Options window
    - Can now ctrl + click on Loftar's map to move to that rough location.
    - Queued movement is back. Shift + click to queue a move.

2/25/19
    - Added more crops that weren't displaying their crop stages

2/24/19