@@ -5,6 +5,9 @@
     - Can now left/right click gobs on Loftar's map like you can on minimap
     - Changed how hover tooltips worked for the 3D world. It's no longer ctrl + hover. There is now a setting that
     toggles it on/off under Gameplay -> "Show Hover Tooltips". You can also toggle with Shift+V
+    - You now move Loftar's map around with ctrl + drag, just like the minimap. You can now move on it with just left click
+    rather than ctrl + left click. Queued moves are still alt + left click. Icons won't stop alt + left click anymore
+    -
 
 
 3/1/19
